fix jumpy nav bar behaviour

--- a/css/stats.css
+++ b/css/stats.css
@@ -13,6 +13,7 @@ nav {
     z-index: 100;
     width: 100%;
     height: 50px;
+    line-height: 40px;
     text-align: center;
     background-color: #000000;
     opacity: 0.4;
